tests/algorithms/x/Python/data_structures/arrays/product_sum.py
# Code generated by Mochi transpiler.
# Version 0.10.59, generated on 2025-08-06 22:12 +0700
import sys
sys.set_int_max_str_digits(0)
import os
if os.path.dirname(__file__) in sys.path:
    sys.path.remove(os.path.dirname(__file__))

def product_sum(arr, depth):
    total = 0
    i = 0
    while i < len(arr):
        el = arr[i]
        if len(el) > 0:
            total = total + product_sum(el, depth + 1)
        else:
            total = total + int(el)
        i = i + 1
    return total * depth
def product_sum_array(array):
    res = product_sum(array, 1)
    return res
example = [5, 2, [-7, 1], 3, [6, [-13, 8], 4]]
print(product_sum_array(example))
